[tool.poetry]
name = "docker-sia"
version = "1.3.7"
description = "Docker image for Sia project."
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
clinner = "^1.10"
tqdm = "^4.23"
aiohttp = "^3.5"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.5"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''
